RESOLVED FIXED39742
[Qt] qt_class.h has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39742
Summary [Qt] qt_class.h has coding-style errors
Anders Bakken
Reported 2010-05-26 09:30:11 PDT
WebCore/bridge/qt/qt_class.h:20: #ifndef header guard has wrong style, please use: qt_class_h [build/header_guard] [5] Total errors found: 1 in 1 files
Attachments
Patch that fixes the coding style issues (967 bytes, patch)
2010-05-26 09:49 PDT, Anders Bakken
no flags
Anders Bakken
Comment 1 2010-05-26 09:49:59 PDT
Created attachment 57104 [details] Patch that fixes the coding style issues
Petri Ojala
Comment 2 2010-05-26 21:37:51 PDT
QtTriaged
WebKit Commit Bot
Comment 3 2010-05-27 13:01:47 PDT
Comment on attachment 57104 [details] Patch that fixes the coding style issues Clearing flags on attachment: 57104 Committed r60319: <http://trac.webkit.org/changeset/60319>
WebKit Commit Bot
Comment 4 2010-05-27 13:01:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.