2010-05-27  Anders Bakken  <agbakken@gmail.com>

Reviewed by David Levin.

        qt_class.h has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=39742

        Fix webkit coding style issues in qt_class.h

        * bridge/qt/qt_class.h:

Canonical link: https://commits.webkit.org/51369@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60319 268f45cc-cd09-0410-ab3c-d52691b4dbfc