WebCore/bridge/qt/qt_class.h
@@ -17,8 +17,8 @@
  *
  */
 
-#ifndef BINDINGS_QT_CLASS_H_
-#define BINDINGS_QT_CLASS_H_
+#ifndef qt_class_h
+#define qt_class_h
 
 #include "Bridge.h"
 #include "qglobal.h"
